[workspace]
resolver = "2"
members = ["tools/isnad-cli"]

[package]
name = "isnad"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Agent-to-agent attestation protocol with AI CAPTCHA"
repository = "https://github.com/Bakobiibizo/ai-isnad"
keywords = ["trust", "attestation", "agents", "provenance", "security", "captcha"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
